--- a/templates/frontpage.html
+++ b/templates/frontpage.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <title>Movie happiness rater</title>
+<head>
+    <link rel="stylesheet" href="{{  url_for('static', filename='frontpage.css')  }}">
+</head>
 
 
 
 <div class="dropdown">
+    <button onclick="myFunction()" class="dropbtn">Dropdown</button>
     <div id="myDropdown" class="dropdown-content">
         <input type="text" placeholder="Search.." id="myInput" onkeyup="filterFunction()">
         <ul>
@@ -16,6 +20,9 @@
     </div>
 </div>
 <script>
+    function myFunction() {
+        document.getElementById("myDropdown").classList.toggle("show");
+    }
     function filterFunction() {
         var input, filter, li, i;
         input = document.getElementById("myInput");
