--- a/static/frontpage.css
+++ b/static/frontpage.css
@@ -4,29 +4,29 @@ body {
   color: #333;
 }
 .dropbtn {
-    background-color: #04AA6D;
-    color: white;
-    padding: 16px;
-    font-size: 16px;
-    border: none;
-    cursor: pointer;
-  }
+  background-color: #04AA6D;
+  color: white;
+  padding: 16px 50px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+  margin-left: 80%;
+}
 
 /* Dropdown button on hover & focus */
 .dropbtn:hover, .dropbtn:focus {
-background-color: #3e8e41;
+  background-color: #3e8e41;
 }
 
 /* The search field */
 #myInput {
-box-sizing: border-box;
-background-image: url('searchicon.png');
-background-position: 14px 12px;
-background-repeat: no-repeat;
-font-size: 16px;
-padding: 14px 20px 12px 45px;
-border: none;
-border-bottom: 1px solid #ddd;
+  box-sizing: border-box;
+  background-position: 14px 12px;
+  background-repeat: no-repeat;
+  font-size: 16px;
+  padding: 14px 20px 12px 45px;
+  border: none;
+  border-bottom: 1px solid #ddd;
 }
 
 /* The search field when it gets focus/clicked on */
@@ -34,26 +34,27 @@ border-bottom: 1px solid #ddd;
 
 /* The container <div> - needed to position the dropdown content */
 .dropdown {
-position: relative;
-display: inline-block;
+  position: relative;
+  display: inline-block;
 }
 
 /* Dropdown Content (Hidden by Default) */
 .dropdown-content {
-display: none;
-position: absolute;
-background-color: #f6f6f6;
-min-width: 230px;
-border: 1px solid #ddd;
-z-index: 1;
+  display: none;
+  position: absolute;
+  background-color: #f6f6f6;
+  min-width: 230px;
+  border: 1px solid #ddd;
+  z-index: 1;
+  left: 80%
 }
 
 /* Links inside the dropdown */
 .dropdown-content a {
-color: black;
-padding: 12px 16px;
-text-decoration: none;
-display: block;
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
 }
 
 /* Change color of dropdown links on hover */
@@ -64,7 +65,8 @@ display: block;
 
 /* Image Styling for Centering */
 .image {
-  max-width: 100%;
+  max-width: 98%;
+  max-height: 98%;
   display: block;
   margin: 0 auto; /* Center horizontally */
 }
