minor changes to additional plot display

--- a/templates/additional_plots.html
+++ b/templates/additional_plots.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <title>Movie happiness rater</title>
 <body>
-<img src="{{ url_for('static', filename='coef_user_500.png') }}">
 <img src="{{ url_for('static', filename='coef_user_all_m.png') }}">
+<img src="{{ url_for('static', filename='coef_user_500.png') }}">
 <img src="{{ url_for('static', filename='RatingPrediction.png') }}">
+<h2> Rating distribution for an individual user</h2>
 <img src="{{ url_for('static', filename='RidgePlot.png') }}">
 </body>
