--- a/templates/frontpage.html
+++ b/templates/frontpage.html
@@ -60,7 +60,7 @@
     <p id="movieDescription"></p>
 </div>
 <div class="additional-plots">
-    <a href="/additional_plots">Additional plots</a>
+    <a href="/additional_plots">User Analysis - Commercial only</a>
 </div>
 </body>
 <script>
